--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="nl" lang="nl">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+	<meta name="verify-v1" content="JbJ+z26pFDg+S0y8eL0lLBBdeoAqgrRGDZ11bfeQxMQ=" />
     <link rel="alternate" type="application/rss+xml" title="RSS Feed" href="/feeds/rss/" />
     <link rel="alternate" type="application/atom+xml" title="Atom Feed" href="/feeds/atom/" />
     <link rel="stylesheet" type="text/css" href="/static/css/base.css" />
