--- a/templates/base.html
+++ b/templates/base.html
@@ -2,12 +2,13 @@
 	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="nl" lang="nl">
-<head>
+<head profile="http://www.w3.org/2005/10/profile">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<meta name="verify-v1" content="JbJ+z26pFDg+S0y8eL0lLBBdeoAqgrRGDZ11bfeQxMQ=" />
     <link rel="alternate" type="application/rss+xml" title="RSS Feed" href="/feeds/rss/" />
     <link rel="alternate" type="application/atom+xml" title="Atom Feed" href="/feeds/atom/" />
     <link rel="stylesheet" type="text/css" href="/static/css/base.css" />
+    <link rel="icon" type="image/png" href="/static/images/icon.png" />
     <title>{% block "title" %}Hans en Paul: 120 jaar{% if category %} - Video's over {{ category }}{% endif %}{% endblock %}</title>	
 </head>
 
